gettext-macros/tests/ui/invalid_ref_to_positional_arg.rs
use gettext_macros::*;

fn main() {
    gettext!("{0}");
    gettext!("{}{1}", 1);
    gettext!("{}{}{2}", 1, 2);
}
